<resources>
    <string name="app_name">BaKalendar</string>
    <plurals name="airing_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="airing_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <plurals name="airing_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="two_values_airing">Next episode in %1$s, %2$s</string>
    <string name="one_value_airing">Next Episode in %1$s</string>
    <string name="search_view_placeholder">Search something…</string>
    <string name="all_tab_title">All</string>
    <string name="favorites_tab_title">Favorites</string>
    <plurals name="notification_text">
        <item quantity="one">A new episode of %1$s is coming out at %2$s!</item>
        <item quantity="other">%3$d of your favorite anime have new episodes in the next 24 hours</item>
    </plurals>
    <string name="notification_title">Prepare yourself!</string>
    <string name="anime_image_content_desc">Anime image</string>
    <string name="season_load_error">Couldn\'t load this season. Check your connection and try again.</string>
    <string name="offline_showing_cached">No connection. Showing saved data.</string>
    <string name="retry">Retry</string>
    <string name="favorites_empty">Tap the star on an anime to add it to your favorites.</string>
    <string name="search_no_results">No anime matches your search or filter.</string>
    <string name="notification_channel_name">Favorite anime airing</string>
    <string name="notification_channel_description">Daily reminder of your favorite anime airing in the next 24 hours</string>
    <string name="search_clear">Clear search</string>
    <string name="detail_next_episode">Next episode</string>
    <string name="detail_starts">Premieres</string>
    <string name="detail_when_local">%1$s · %2$s your time</string>
    <string name="detail_synopsis">Synopsis</string>
    <string name="detail_no_synopsis">No synopsis yet.</string>
    <string name="detail_read_more">Read more</string>
    <string name="detail_read_less">Show less</string>
    <string name="detail_related">Related</string>
    <string name="detail_load_error">Couldn\'t load this anime. Check your connection and try again.</string>
    <string name="detail_recommendations">You might also like</string>
    <string name="detail_tab_overview">Overview</string>
    <string name="detail_tab_episodes">Episodes</string>
    <string name="episodes_error">Couldn\'t load the episodes. Check your connection and try again.</string>
    <string name="episodes_empty">No episodes have aired yet.</string>
    <string name="episode_number">EP</string>
    <string name="episode_untitled">Episode %1$d</string>
    <string name="episode_expected">Expected %1$s</string>
    <string name="episode_filler">Filler</string>
    <string name="episode_recap">Recap</string>
    <string name="watch_where_title">Episode %1$d</string>
    <string name="watch_where_subtitle">Where to watch</string>
    <string name="watch_where_note">Availability depends on your country.</string>
    <string name="watch_where_none">No streaming platforms listed for this anime.</string>
    <string name="watch_on_mal">View episode on MyAnimeList</string>
    <string name="detail_information">Information</string>
    <string name="detail_open_mal">View on MyAnimeList</string>
    <string name="detail_add_favorite">Add to favorites</string>
    <string name="detail_in_favorites">In favorites</string>
    <string name="detail_score">%1$.2f</string>
    <string name="detail_rank">#%1$d</string>
    <plurals name="detail_episodes">
        <item quantity="one">%d episode</item>
        <item quantity="other">%d episodes</item>
    </plurals>
    <string name="info_english_title">English title</string>
    <string name="info_japanese_title">Japanese title</string>
    <string name="info_status">Status</string>
    <string name="info_aired">Aired</string>
    <string name="info_broadcast">Broadcast</string>
    <string name="info_studios">Studios</string>
    <string name="info_source">Source</string>
    <string name="info_duration">Duration</string>
    <string name="info_rating">Rating</string>
    <string name="info_themes">Themes</string>
    <string name="info_demographic">Demographic</string>
    <string name="info_members">Members</string>
    <string name="watch_trailer">Watch trailer</string>
    <string name="filters">Filters</string>
    <string name="filters_clear">Clear</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_popularity">Popularity</string>
    <string name="sort_next_episode">Next episode</string>
    <string name="genres">Genres</string>
    <string name="show_as_list">Show as list</string>
    <string name="show_as_cards">Show as cards</string>
    <string name="favorite_button_content_desc">Add to favorites</string>
    <string name="menu_open">Open menu</string>
    <string name="menu_season">This season</string>
    <string name="menu_calendar">Weekly calendar</string>
    <string name="drawer_subtitle">Anime season calendar</string>
    <string name="calendar_title">Weekly calendar</string>
    <string name="calendar_favorites_only">Favorites only</string>
    <string name="calendar_empty_day">Nothing airs this day.</string>
    <string name="calendar_empty_day_favorites">None of your favorites airs this day.</string>
    <string name="back">Back</string>
    <string name="notification_line">%1$s · %2$s</string>
</resources>